--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
-}
+/* App.css */
+@media print {
+  body {
+    width: 297mm;
+    height: 210mm;
+    margin: 0;
+  }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .report-page {
+    page-break-after: always;
   }
 }
+/* 最後のページ用のスタイルを追加 */
+.report-page-last {
+  page-break-after: auto;
+}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.report-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+.report-table {
+  width: 32%;
+  margin-bottom: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.report-header {
+  text-align: center;
+  margin-top: 0;
+}
+
+.report-info {
+  text-align: right;
+  margin-top: -20px;
+}
+
+.table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.table th, .table td {
+  border: 1px solid black;
+  padding: 5px;
+  text-align: center;
 }
